2006-11-20  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-mail.el (w3m-mail-compose-with-vm): Require vm-startup.

2006-11-20  Hiroya Murata  <lapis-lazuli@pop06.odn.ne.jp>

	* w3m-mail.el (w3m-mail-compose-with-semi): Require mime-edit.

2006-11-11  Yoichi NAKAYAMA  <yoichi@geiin.org>

	* shimbun/shimbun.el (shimbun-servers-list): Exclude hash,
	rss-hash, atom, atom-hash and multi.

2006-11-02  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-asahi.el (shimbun-asahi-group-table): Update index
	url and regexp for kansai.fuukei group.

2006-10-26  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-asahi.el (shimbun-asahi-prepare-article): Break long
	lines only when text/html is preferred.

2006-10-23  Tsuyoshi CHO  <tsuyoshi_cho@ybb.ne.jp>

	* shimbun/sb-rss-hash.el (shimbun-hash-update-items): Fix
	multibyte problem.

	* shimbun/sb-rss.el (shimbun-headers): Ditto.

2006-10-20  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-kantei.el (shimbun-kantei-x-face-alist): Renew.

2006-10-13  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-asahi.el (shimbun-asahi-prepare-article): Break long
	lines.

	* shimbun/sb-kantei.el (shimbun-kantei-from-address): Remove.
	(shimbun-kantei-groups): Add m-magazine-ja.koizumi group.
	(shimbun-kantei-x-face-alist): Restore Koizumi's face.
	(shimbun-index-url): Work with m-magazine-ja.koizumi group; make
	m-magazine group an alias to m-magazine-ja.koizumi group.
	(shimbun-from-address): Return a correct author.
	(shimbun-get-headers): Update regexp for English articles; remove
	too match whitespace in Japanese subject.
	(shimbun-clear-contents): Remove <CENTER> tags in English article.

2006-10-12  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-kantei.el (shimbun-kantei-from-address): Shinzo Abe.
	(shimbun-kantei-groups): Doc fix.
	(shimbun-kantei-x-face-alist): Renew.

2006-10-11  David Hansen  <david.hansen@physik.fu-berlin.de>

	* w3m.el (w3m-relationship-estimate-rules): Support for google code
	search added.
